project/test/semantics/bad/input/Bad56_shouldThrowTypesDoNotMatchErrorWhenEquatingObjectsOfDifferentTypes.ty
mutable class Student {
    
    values: {
        name: String;
        id: Int = 38493;
        grades: Grades;
    }
    
    variables: {
        age: Int;
        year: Int;
    }
}

mutable class Grades {
    
    variables: {
        grade1: Int;
        grade2: Int;
        grade3: Int = 13;
        grade4: Int;
    }
    
    functions: {
        someFunction: () -> Int = {
            3 + 3
        }
    }
}

singleton class ObjectEquality {
    
    actions: {
        main: () -> Bool = {
            val student1: Student = Student("Diana Frost", Grades(11, 12, 14), 20, 2);
            
            val grades2: Grades = Grades(1, 2, 4);
            val student2: Student = Student("Mark" ++ "Frost", grades2, 19, 4);
            
            val student3: Student = Student("Mark" ++ "Frost", grades2, 19, 4);
            
            student1 != student2 and student1 != grades2 and student1 == student3 // TypesDoNotMatchError
        }
    }
}
